--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
-spring.application.name= personal-microservice
-spring.cloud.config.uri= http://localhost:8888
-management.endpoints.web.exposure.include= refresh
+spring.application.name= personal
+spring.config.import=optional:configserver:http://localhost:8888
+#spring.cloud.config.enabled=false
+
+#spring.cloud.config.uri= http://localhost:8888
+management.endpoints.web.exposure.include= *
 
 ##spring.config.import=optional:configserver:http://localhost:8888
+
+#spring.profiles.active=dev
 
